@@ -34,6 +34,7 @@ Version 7.0
 - Allow autocompletion function to determine whether or not to return
   completions that start with the incomplete argument.
 - Add native ZSH autocompletion support See #323.
+- Add support for auto-completion documentation. See #866.
 - Subcommands that are named by the function now automatically have the
   underscore replaced with a dash.  So if you register a function named
   `my_command` it becomes `my-command` in the command line interface.
